# app

./: .appveyor.yml  .gitignore  .travis.yml  .travis_before.sh  .travis_before_install.sh  .travis_build_linux.sh  .travis_build_macos.sh  .travis_install.sh  .travis_install_deps.sh  .travis_make_build_linux.sh  .travis_make_build_macos.sh  AUTHORS  CHANGELOG.md  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.in  NEWS  README  README.md  TODO  configure  copying  doxyfile  innosetup.iss  readme  socnetv.appdata.xml  socnetv.desktop  socnetv.desktop.in  socnetv.kdevelop  socnetv.kdevelop.pcs  socnetv.kdevses  socnetv.pro  socnetv.pro.in  socnetv.spec
debian/: changelog  control  copyright  dirs  docs  install  manpages  rules  socnetv.doc-base  watch
doc/: footer.html  header.html  toc.html  visualisation.html
docs/: ARCHITECTURAL_REFACTORING_ROADMAP.md  README.md  README_DEVELOPER_NOTES.md
logo/: socnetv-text-and-logo-shadow.xcf  socnetv-text-and-logo.xcf  socnetv-text.xcf
man/: socnetv.1
manual/: analysis.html  analysis.txt  bugs.html  credits.html  footer.html  footer.html.bak  formats.html  formats.txt  generate.html  generate.txt  gui.html  gui.txt  header.html  intro.html  intro.txt  manual.html  socnetv.css  toc.html  visualisation.html
nets/: 1000actors-centrality.graphml  100actors-lattice-10-100  100nodes-random-pajek.net  10actors-colors.dot  10random.sm  11actors-pajek-matrix.adj  11actors-pajek-matrix.paj  11nodes-simple-cliques.graphml  15actors-nonsymmetric.net  20-pajek.net  22-actors-sociomatrix-nonsymmetric.net  22-actors-sociomatrix.net  26actors-star-non-symmetric.net  30actors-nonsymmetric.net  32-actors-counterexample-betweeness-centrality.net  327-crn-pajek.net  3actors-clique.graphml  3cliques.net  4actors-cyclic.net  4actors-line-properties.dot  50nodes-centrality.graphml  577Actors-symmetric-one-isolated.net  9actors-star.graphml  Freemans_EIES-3-messages_n48.lst  HighTechManagers_Advice.graphml  HighTechManagers_Friendship.graphml  HighTechManagers_ReportsTo.graphml  Krackhardt_High-tech_managers-advice.graphml  Krackhardt_High-tech_managers-friend.sm  M1G1-weighted.graphml  attributes.graphml  b.graphml  ball.graphml  ball.net  jin3-sm.txt  jin4-sm.txt  killer.graphml  killer2.graphml  lattice-alt-more.net  lattice-alt.net  (+13 more)
scripts/: README.md  README__run_benchmarks.md  entitlements.plist  innosetup.iss  run_benchmarks.sh  run_golden_compares.sh  run_golden_io_roundtrip.sh  run_io_roundtrip_shipped_datasets.sh  travis_install_deps.sh  travis_make_build_linux.sh  travis_make_build_macos.sh  travis_upload_packages.sh  update_translations.sh
site/: ChangeLog  author.html  bugs.html  default.css  documentation.html  downloads.html  index.html  links.html  news  news.html  references.html  screenshots.html  socnetv_la.ts  translations.html
src/: .directory  Makefile  backgrcircle.cpp  backgrcircle.h  chart.cpp  chart.h  data.qrc  datasetselectdialog.cpp  datasetselectdialog.h  dialogclusteringhierarchical.cpp  dialogclusteringhierarchical.h  dialogdatasetselect.cpp  dialogdatasetselect.h  dialogdissimilarities.cpp  dialogdissimilarities.h  dialogfilteredgesbyweight.cpp  dialogfilteredgesbyweight.h  dialognodeedit.cpp  dialognodeedit.h  dialogpearsoncorrelation.cpp  dialogpearsoncorrelation.h  dialogpreviewfile.cpp  dialogpreviewfile.h  dialogranderdosrenyi.cpp  dialogranderdosrenyi.h  dialograndlattice.cpp  dialograndlattice.h  dialograndregular.cpp  dialograndregular.h  dialograndscalefree.cpp  dialograndscalefree.h  dialograndsmallworld.cpp  dialograndsmallworld.h  dialogsettings.cpp  (+86 more)
trunk/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.cvs  Makefile.in  NEWS  README  TODO  config.h  config.h.in  configure  configure.ac  socnetv.desktop  socnetv.desktop.in  socnetv.pro  socnetv.pro.in  socnetv.spec  socnetv.spec.in
trunk/debian/: changelog  control  copyright  dirs  doc-base  docs  install  manpage.1  manpages  menu  rules  socnetv.doc-base
trunk/doc/: analysis.html  credits.html  footer.html  formats.html  gfdl.html  gui.html  header.html  intro.html  socnetv.css  toc.html  visualisation.html
trunk/man/: socnetv.1
trunk/manual/: analysis.html  bugs.html  credits.html  footer.html  formats.html  gui.html  intro.html  manual.html  socnetv.css  toc.html
trunk/nets/: 1000actors-centrality.graphml  100nodes-random-pajek.net  15actors-nonsymmetric.net  2-3-tree.net  20-petri5.net  22-actors-sociomatrix.net  327-crn-pajek.net  38actors-spiral.net  3clique.net  3cliques.net  4-actors-sm.csv  40actors-non-symmetric.net  4actors-cyclic.net  5-actors-plain-list.lst  50nodes-random-pajek.net  577Actors-symmetric-one-isolated.net  5star.net  6actors-nonsymmetric-negative-weights.net  9-pajek-symmetric.net  Freemans_EIES-1_n48.lst  Freemans_EIES-2_n48.lst  HighTechManagers_Advice.graphml  HighTechManagers_Friendship.graphml  Krackhardt_High-tech_managers-advice.net  M1G1.graphml  attributes.graphml  florentine-business.net  florentine-marital-pajek.net  florentine-marital.net  mexico-power-network.lst  network.dl  test-label.dot  test.dot  test.net  test1.dot  test2.dot  tree-14.net  tree23.net
trunk/nets/jin/: socnet 1.o.txt  socnet 3.o.txt  socnet1.txt  socnet2.txt
trunk/src/: analyzer.cpp  analyzer.h  backgrcircle.cpp  backgrcircle.h  datasetrecreatordialog.h  datasetselectdialog.cpp  datasetselectdialog.h  edge.cpp  edge.h  edgeweight.cpp  edgeweight.h  filteredgesbyweightdialog.cpp  filteredgesbyweightdialog.h  filteredgesdialog.cpp  filteredgesdialog.h  graph.cpp  graph.h  graphicswidget.cpp  graphicswidget.h  guide.cpp  guide.h  htmlviewer.cpp  htmlviewer.h  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  matrix.cpp  matrix.h  netlayout.cpp  netlayout.h  node.cpp  node.h  nodelabel.cpp  nodelabel.h  nodenumber.cpp  nodenumber.h  parser.cpp  parser.h  recreatedatasetdialog.cpp  (+9 more)
trunk/src/forms/: datasetrecreatordialog.ui  datasetselectdialog.ui  filteredgesbyweightdialog.ui  filteredgesdialog.ui  webcrawlerdialog.ui
trunk/src/images/: .directory
trunk/translations/: socnetv_de.ts  socnetv_es.ts
(+341 files in other folders)
